<resources>
    <string name="no_data">No data</string>
    <string name="feature_configuration">Feature Configuration</string>
    <string name="app_name" translatable="false">Commons</string>
    <string name="change_calendar_view">Change calendar view</string>
    <string name="clear">clear</string>
    <string name="action_accept">Accept</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_all">clear selection</string>
    <string name="navigation_list_view">List view</string>
    <string name="navigation_table_view">Table view</string>
    <string name="navigation_map_view">Map view</string>
    <string name="navigation_analytics">Analytics</string>
    <string name="navigation_tasks">Tasks</string>
    <string name="navigation_programs">Programs</string>
    <string name="navigation_relationships">Relationships</string>
    <string name="navigation_relations">Relations</string>
    <string name="navigation_notes">Notes</string>
    <string name="navigation_data_entry">Data entry</string>
    <string name="navigation_tei_data">Details</string>
    <string name="event_overview">Details</string>
    <string name="select_option">Select option</string>
    <string name="search">Search</string>
    <string name="events">events</string>
    <string name="data_sets">Data sets</string>
    <string name="tei">TEI</string>
    <string name="info">Info</string>
    <string name="done">Done</string>
    <string name="filters_active">Filters applying</string>
    <string name="filters_disabled">No filters applied</string>
    <string name="filters_title_period">Period</string>
    <string name="filters_title_org_unit">Org. Unit</string>
    <string name="filters_title_sorting">Sorting</string>
    <string name="filters_title_status">Status</string>
    <string name="filters_title_state">Sync</string>
    <string name="filters_title_assigned">Assigned to me</string>
    <string name="filters_title_date">Date</string>
    <string name="filters_title_event_label_date">%s date</string>
    <string name="filters_title_event_label_status">%s status</string>
    <string name="filters_title_enrollment_status">@string/enrollment_status</string>
    <string name="filter_follow_up_label">Followed up %s</string>
    <string name="select_period">Select period type</string>
    <string name="daily_period">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-weekly</string>
    <string name="weekly_start_wednesday">Weekly starting Wednesday</string>
    <string name="weekly_start_thursday">Weekly starting Thursday</string>
    <string name="weekly_start_friday">Weekly starting Friday</string>
    <string name="weekly_start_saturday">Weekly starting Saturday</string>
    <string name="weekly_start_sunday">Weekly starting Sunday</string>
    <string name="monthly">Monthly</string>
    <string name="bi_monthly">Bi-monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="quarterly_nov">Quarterly Nov</string>
    <string name="six_monthly">Six-monthly</string>
    <string name="six_monthly_april">Six-monthly starting April</string>
    <string name="six_monthly_july">Six-monthly starting July</string>
    <string name="six_monthly_nov">Six-monthly starting November</string>
    <string name="yearly">Yearly</string>
    <string name="financial_year_february">Financial year starting February</string>
    <string name="financial_year_april">Financial year starting April</string>
    <string name="financial_year_july">Financial year starting July</string>
    <string name="financial_year_august">Financial year starting August</string>
    <string name="financial_year_september">Financial year starting September</string>
    <string name="financial_year_october">Financial year starting October</string>
    <string name="financial_year_november">Financial year starting November</string>
    <string name="state_synced">Sync</string>
    <string name="state_to_post">To send</string>
    <string name="state_to_update">To update</string>
    <string name="state_to_delete">To delete</string>
    <string name="state_error">Error</string>
    <string name="state_warning">Warning</string>
    <string name="state_uploading">Uploading</string>
    <string name="state_relationship">Relationship</string>
    <string name="sent_by_sms">Sent by sms</string>
    <string name="sync_by_sms">Synced by SMS</string>
    <string name="filter_event_status_open">Open</string>
    <string name="filter_event_status_schedule">Schedule</string>
    <string name="filter_event_status_overdue">Overdue</string>
    <string name="filter_event_status_visited">Visited</string>
    <string name="filter_event_status_completed">Completed</string>
    <string name="filter_event_status_skipped">Skipped</string>
    <string name="active">Active</string>
    <string name="cancelled">Cancelled</string>
    <string name="enrollment_status_active">Open</string>
    <string name="enrollment_status_completed">Complete</string>
    <string name="enrollment_status_cancelled">Cancelled</string>
    <string name="record_marked_for_deletion">This record is marked for deletion. You can\'t access it.</string>
    <string name="filter_period_today">Today</string>
    <string name="filter_period_yesterday">Yesterday</string>
    <string name="filter_period_tomorrow">Tomorrow</string>
    <string name="filter_period_this_week">This week</string>
    <string name="filter_period_last_week">Last week</string>
    <string name="filter_perdior_next_week">Next week</string>
    <string name="filter_period_this_month">This month</string>
    <string name="filter_period_last_month">Last month</string>
    <string name="filter_period_next_month">Next month</string>
    <string name="filter_period_form_to">From - To</string>
    <string name="filter_period_other">Other</string>
    <string name="filter_period_any">Anytime</string>
    <string name="working_list_default_label">Working list %s</string>
    <string name="filter_period_last_n_days">Last %d days</string>
    <string name="filter_period_this_year">This year</string>
    <string name="filter_period_this_bimonth">This bimonth</string>
    <string name="filter_period_last_bimonth">Last bimonth</string>
    <string name="filter_period_this_quarter">This quarter</string>
    <string name="filter_period_last_quarter">Last quarter</string>
    <string name="filter_period_six_months">This six months</string>
    <string name="filter_period_last_six_months">Last six months</string>
    <string name="filter_period_last_n_years">Last %d years</string>
    <string name="filter_period_last_n_months">Last %d months</string>
    <string name="filter_period__last_n_weeks">Last %d weeks</string>
    <string name="filter_period_weeks_this_year">Weeks this year</string>
    <string name="filter_period_months_this_year">Months this year</string>
    <string name="filter_period_bimonths_this_year">Bimonths this year</string>
    <string name="filter_period_quarters_this_year">Quarters this year</string>
    <string name="filter_period_months_last_year">Months last year</string>
    <string name="filter_period_quarters_last_year">Quarters las years</string>
    <string name="filter_period_last_year">Last year</string>
    <string name="filter_period_this_biweek">This biweek</string>
    <string name="filter_period_last_biweek">Last biweek</string>
    <string name="filter_period_last_n_bimonths">Last %d bimonths</string>
    <string name="filter_period_last_n_quarters">Last %d quarters</string>
    <string name="last_n_months">Last %d months</string>
    <string name="filter_period_this_financial_year">This financial year</string>
    <string name="filter_period_last_financial_year">Last financial year</string>
    <string name="filter_period_last_n_financial_years">Last %d financial years</string>
    <string name="filter_period_last_n_biweeks">Last %d biweeks</string>
    <string name="filter_period_from_to" translatable="false">%s - %s</string>
    <string name="period">Period</string>
    <string name="DAILY">Daily</string>
    <string name="WEEKLY">Weekly</string>
    <string name="MONTHLY">Monthly</string>
    <string name="YEARLY">Yearly</string>
    <string name="filter_sync_synced">Synced</string>
    <string name="filter_sync_not_synced">Not Synced</string>
    <string name="filter_sync_error">Sync Error</string>
    <string name="filter_sync_sms">SMS Synced</string>
    <string name="interval_now">now</string>
    <string name="interval_minute_ago">%d min. ago</string>
    <string name="interval_hour_ago">%d hours ago</string>
    <string name="interval_yesterday">Yesterday</string>
    <string name="section_feedback">Feedback</string>
    <string name="section_indicators">Indicators</string>
    <string name="section_charts">Charts</string>
    <string name="section_charts_indicators">Charts and indicators</string>
    <string name="enrolled_in">Enrolled in</string>
    <string name="login_error_null_pass">Password is missing. Please enter password.</string>
    <string name="login_error_null_username">Username is missing. Please enter username.</string>
    <string name="login_error_dhis_version">This server is running a dhis version different than 2.29. Update your server version or use the testing environment to proceed.</string>
    <string name="login_error_dhis_version_v2">This server is running a DHIS2 version different than %s. Update your server version or contact your admin.</string>
    <string name="login_error_unsuccessful_response">Something went wrong. Please check that server URL, username and password are correct and try again.</string>
    <string name="login_error_error_response">Sorry! Something failed on the server side.</string>
    <string name="login_error_no_dhis_instance">The URL provided is not a DHIS2 server.</string>
    <string name="login_error_bad_credentials">The username or password are incorrect</string>
    <string name="login_error_unknown_host">Unknown server</string>
    <string name="online_search_parsing_error">Error while parsing results</string>
    <string name="error_unexpected">Something unexpected went worng.</string>
    <string name="error_too_manu_org_units">Your user has more than one root organisation units. Review your configuration or contact your admin.</string>
    <string name="error_max_tei_count_reached">Online results exceed the maximum number of tracker instances that can be shown. Please refine your search.</string>
    <string name="error_many_requests">The server is a bit busy at this moment. Please try a bit later.</string>
    <string name="error_already_authenticated">The user is already logged in.</string>
    <string name="error_already_executed">The request has already been executed.</string>
    <string name="error_api_invalid_query">Server request is invalid.</string>
    <string name="error_app_name_not_set">The application name has not been set.</string>
    <string name="error_app_version_not_set">The application version has not been set.</string>
    <string name="error_access_keystore">Unable to access device keystore.</string>
    <string name="error_create_existing_error">Creation aborted. The object already exists.</string>
    <string name="error_delete_non_existing_object">Deletion aborted. The object does not exist.</string>
    <string name="error_instance_keystore">Unable to instantiate keystore.</string>
    <string name="error_reserve_value_on_server">We couldn´t reserve values for these record. Please contact your admin.</string>
    <string name="error_export_login">Please login to export the database.</string>
    <string name="error_export_encrypted">Exporting an encrypted database is not supported.</string>
    <string name="error_import_exist">You are importing an already existing database.</string>
</resources>