<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_tasks"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/ic_navigation_tasks"
        android:title="@string/navigation_tasks"/>

    <item
        android:id="@+id/navigation_programs"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_forms"
        android:title="@string/navigation_programs"/>

    <item
        android:id="@+id/navigation_analytics"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_analytics"
        android:title="@string/navigation_analytics"/>

    <item
        android:id="@+id/navigation_jica_mch"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_forms"
        android:title="@string/navigation_jica_mch"/>
</menu>