<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="70dp"
            android:background="@color/dialog_gray_background"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/text_black_333"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="This is the title" />

            <LinearLayout
                android:id="@+id/orgUnitSearchLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_border"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_search" />

                <EditText
                    android:id="@+id/orgUnitSearchEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>


            <HorizontalScrollView
                android:id="@+id/resultsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/orgUnitSearchLayout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/results"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:paddingTop="4dp"
                    android:paddingBottom="8dp"
                    app:chipSpacing="8dp"
                    app:singleLine="true" />
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/clear_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resultsContainer"
                tools:listitem="@layout/org_unit_cascade_level_item" />

            <Button
                android:id="@+id/clear_button"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:text="@string/clear"
                android:textColor="@color/colorGreyDefault"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel_button" />


            <Button
                android:id="@+id/cancel_button"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/colorGreyDefault"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/accept_button" />

            <Button
                android:id="@+id/accept_button"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:text="@string/action_accept"
                android:textColor="@color/blue_4fa"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>